src/pages/technology.module.scss
.technology {
	$hero-height-large: rem(591px);
	$hero-height-medium: rem(592px);
	$hero-height-small: rem(412px);

	&__hero {
		height: $hero-height-large;

		&__block {
			* {
				color: white;
			}

			;
			background-color: $color-neutral-black;

			&:first-child {
				--f-gutter: 0px;

				>div>div {
					height: 100%;
				}
			}

			&:last-child {
				background-color: $color-blue;
				position: relative;
				overflow: hidden;
				> div > div {
					padding: 0px;
					height: 100%;
				}

			}

			&__left {
				padding: rem(52px) 0 1rem rem(16px);
				height: 100%;
				display: grid;
				align-items: end;

				div {
					padding-bottom: rem(55px);

					h1 {
						font-weight: 800;
						font-family: var(--lk-font-inter);
					}
					p {
						margin: 0;
						font-size: rem(20px);
						line-height: rem(30px);

						&:last-child {
							padding-top: rem(28px);
						}

						strong {
							font-size: 1.5rem;
							line-height: 2rem;
							color: $color-cyan;

							&:last-child {
								color: $color-pink
							}
						}
					}
				}
			}

			&__right {
				height: 100%;
				div:first-child {
					z-index: 1;
					position: absolute;
					top: 0;
					left: 0;
					height: $hero-height-large;
					width: rem(155px);
					background-image: linear-gradient(to top right, $color-neutral-black 0%, $color-neutral-black 50%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%);
					@include respond-to("<=s") {
						display: none;
					}
				}
				&__background {
					width: 110%;
					height: 240%;
					position: relative;
					transform: translate(6px, -413px);
					z-index: 0;
					@include respond-to("<=s") {
						transform: translate(6px, -224px);
					}
				}
				&__elipse {
					max-width: none !important;
					width: 648px;
					height: 648px;
					position: absolute;
					right: 122px;
					top: -30px;
					transform: translate(50%, -50%);	
					@include respond-to("<=s") {
						transform: translate(30%, -49%);	
					}				
				}
			}
		}
	}

	&__features {
		background-color: $color-cyan;
		--f-gutter: 0;
		padding: rem(56px) 0;

		&__block {
			&__content {
				display: grid;
				grid-template-columns: 1fr 1fr 1fr;
				grid-column-gap: 1rem;

				div {
					height: rem(168px);
					display: grid;
					grid-template-rows: min-content;
					padding: 1rem;

					h3 {
						font-size: rem(28px);
						line-height: rem(36px);
						color: $color-blue;
					}

					p {
						line-height: rem(28px);
						margin: 0;
						font-size: rem(16px);
					}
				}
			}
		}
	}

	&__technologies {
		&__block {
			&__container {
				display: grid;
				justify-items: center;
				grid-row-gap: .5rem;
				padding: rem(50px) 0;
				max-width: rem(924px);
				margin: auto;

				&__row {
					width: 100%;
					display: grid;
					grid-template-columns: repeat(14, 1fr);
					grid-template-areas: "a0 a1 a2 a3 a4 a5 a6 a7 a8 a9 a10 a11 a12 a13";
					align-items: center;
					@include respond-to("m") {
						height: 48px;
					}
					&.row-0 {
						grid-template-areas: ". . . a0 a1 a2 . a3 a4 a5 a6 . . ."
					}

					&.row-1 {
						grid-template-areas: ". . a0 a1 a2 a2 . a3 a3 a4 a5 a6 . ."
					}

					&.row-2 {
						grid-template-areas: "a0 a1 a2 . a3 a4 a5 . a6 a7 . a8 a8 a9"
					}

					&.row-3 {
						grid-template-areas: ". a0 a1 a2 . a3 a4 . a5 a5 a6 a7 . ."
					}

					&.row-4 {
						grid-template-areas: "a0 a1 a1 . a2 a3 a4 a4 a5 a6 a6 a7 a8 a8"
					}

					&.row-5 {
						grid-template-areas: ". a0 a0 a1 a1 a2 . a3 a3 a4 a4 a5 . ."
					}

					div {
						display: grid;
						align-items: center;
						justify-items: center;
						height: rem(50px);
						position: relative;
						aspect-ratio: 1;
						img {
							width: auto !important;
							max-width: none !important;
						}
					}
				}
			}
		}
	}

	@include respond-to("<=l") {
		&__hero {
			height: $hero-height-medium;
			--f-golden-ratio: 1.48;

			&__block {
				&__left {
					padding: rem(32px) 0 rem(41px) rem(32px);

					div {
						padding: 0
					}
				}

				&__right {
					&__elipse {
						right: rem(-28px);
						top: rem(-28px);
					}
				}
			}
		}
		&__features {
			background-color: $color-cyan;
			--f-gutter: 16px;
			padding: rem(40px) 0;

			&__block {
				&__content {
					grid-template-columns: 1fr 1fr;
					grid-column-gap: 1rem;
					grid-row-gap: 1.5rem;

					div {
						height: auto
					}
				}
			}
		}

		&__technologies {
			&__block {
				&__container {
					max-width: rem(864px);
					justify-items: center;
					margin: auto;
					grid-row-gap: 0;

					&__row {						
						grid-column-gap: 0; 
						@include respond-to("<=m") {
							max-width: 672px;
						}	
						div {
							height: rem(48px);		
							@include respond-to("<=m") {
								height: rem(32px);
							}					
						}
					}
				}
			}
		}
	}

	@include respond-to("<=s") {
		&__hero {
			height: auto;

			&__block {
				&:first-child {
					--f-gutter: 16px
				}

				&:last-child {
					--f-gutter: 0;
					background-position: left 0 top rem(-341px);
				}

				&__left {
					padding: 0;

					div {
						margin: auto;
						max-width: rem(343px);
						padding: 99px 0 10px;

						h2 {
							font-size: rem(40px);
							line-height: rem(52px);
						}

						p {
							font-size: 1rem;
							line-height: rem(28px);

							strong {
								font-size: 1.5rem;
								line-height: 2rem;
							}
						}
					}
				}
				&__right {
					height: 350px;
					&__elipse {
						width: 424px;
						height: 424px;
						right: 132px;
						top: -11px;
					}
				}
			}
		}
		&__features {
			background-color: $color-cyan;
			padding: 0;

			&__block {
				&__content {
					padding: 40px 0;
					display: grid;
					grid-template-columns: 1fr;
					grid-row-gap: 1rem;

					div {
						margin: auto;
						max-width: rem(343px);
						height: rem(164px);
						display: grid;
						padding: 1rem 0 rem(12px) 0;

						h3 {
							font-size: rem(28px);
							line-height: rem(36px);
							color: $color-blue;
						}

						p {
							line-height: rem(28px);
							margin: 0;
						}
					}
				}
			}
		}

		&__technologies {
			&__block {
				&__container {
					padding: rem(56px) 0;
					grid-row-gap: 1rem;
					max-width: rem(320px);

					&__row {
						padding: 0 !important;
						grid-template-columns: repeat(8, 1fr);
						grid-template-areas: "a0 a1 a2 a3 a4 a5 a6 a7";
						grid-row-gap: 1rem;

						div {
							height: auto;
							padding: 0 4px;
							height: rem(32px);
						}

						&.row-0 {
							grid-template-areas: "a0 a1 a2 .  a3 a4 a5 a6"
						}

						&.row-1 {
							grid-template-areas: "a0 a1 a2 a2 . a3 a3 a4" "a5 a6 . . . . . ."
						}

						&.row-2 {
							grid-template-areas: "a0 a1 a2 . a3 a4 a5 ." "a6 a7 . a8 a8 a9 . ."
						}

						&.row-3 {
							grid-template-areas: "a0 a1 a2 . a3 a4 . . " "a5 a5 a6 a7 . . . ."
						}

						&.row-4 {
							grid-template-areas: "a0 a1 a1 . a2 a3 a4 a4" "a5 a6 a6 a7 a8 a8 . ."
						}

						&.row-5 {
							grid-template-areas: "a0 a0 a1 a1 a2 . a3 a3" "a4 a4 a5 . . . . ."
						}
					}
				}
			}
		}
	}

	@include respond-to("<=xs") {
		&__hero__block__right {
			&__elipse {
				right: 2rem;
				top: -11px;
			}
		}
	}

	@include respond-to("xxs") {
		&__technologies__block__container {
			&__container {
				max-width: none;
			}
		}
	}
}

